--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "tsc --build --watch",
     "dev:test": "yarn test --coverage --watch-all",
     "build": "tsc",
+    "build:docs": "doctoc README.md",
     "test": "jest",
     "clean": "rm -rf dist",
     "release:stable": "dripip stable",
@@ -26,6 +27,7 @@
     "@types/jest": "26.0.9",
     "@types/lodash": "^4.14.159",
     "dedent": "^0.7.0",
+    "doctoc": "^1.4.0",
     "dripip": "0.10.0",
     "jest": "26.4.0",
     "jest-watch-typeahead": "0.6.0",
