--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-lib-typescript",
+  "name": "setset",
   "version": "0.0.0",
   "main": "dist/index.js",
   "repository": "git@github.com:prisma-labs/project-lib-typescript.git",
