--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setset",
-  "version": "0.0.0-dripip",
+  "version": "0.0.2",
   "main": "dist/index.js",
   "repository": "git@github.com:prisma-labs/project-lib-typescript.git",
   "author": "Prisma Labs Team",
